# chrome-log-beautifier

./: CMakeLists.txt
src/: main.cpp
src/ui/: main_component.hpp
